fix(rootlist): fixes collapsed rootlist

--- a/_rootlist.sass
+++ b/_rootlist.sass
@@ -20,3 +20,7 @@ button[aria-label="Expand folder"], button[aria-label="Collapse folder"]
 // No arrow
 button[aria-label="Expand folder"] > span, button[aria-label="Collapse folder"] > span
 	display: none !important
+
+// Collapsed
+.x-entityImage-imageContainer
+	border-radius: 0px
