--- a/_shadow.sass
+++ b/_shadow.sass
@@ -16,3 +16,6 @@ div.main-card-PlayButtonContainer
 // ... rootlist
 .main-yourLibraryX-libraryContainer > div:first-child
 	box-shadow: none
+// ... collapsed rootlist
+.x-entityImage-imageContainer
+	box-shadow: none
