--- a/user.css
+++ b/user.css
@@ -218,6 +218,10 @@ button[aria-label="Expand folder"] > span, button[aria-label="Collapse folder"] 
   display: none !important;
 }
 
+.x-entityImage-imageContainer {
+  border-radius: 0px;
+}
+
 form .main-topBar-searchBar {
   background-color: var(--spice-selected-row) !important;
 }
@@ -269,6 +273,10 @@ div.main-card-PlayButtonContainer {
 }
 
 .main-yourLibraryX-libraryContainer > div:first-child {
+  box-shadow: none;
+}
+
+.x-entityImage-imageContainer {
   box-shadow: none;
 }
 
